Fixed listview for added buttons etc

--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/sats_core"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:textStyle="bold"
-        android:layout_above="@+id/gym_location"
-        android:textSize="30sp"/>
-
-    <TextView
-        android:id="@+id/gym_location"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_above="@+id/instructors_name"
-        android:textSize="20sp"/>
-
-    <TextView
-        android:id="@+id/instructors_name"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:textSize="20sp"/>
-
     <ListView
         android:id="@+id/list_view"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:textSize="20sp"
