--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -1,36 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
 
     <TextView
-        android:id="@+id/sats_core"
+        android:id="@+id/workout_type"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="match_parent"
+        android:textSize="15sp"
         android:textStyle="bold"
+        android:layout_marginLeft="10dp"/>
+
+    <TextView
+        android:id="@+id/gym_location"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/workout_type"
+        android:textSize="10sp"/>
+
+    <TextView
+        android:id="@+id/instructors_name"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/gym_location"
-        android:textSize="30sp" />
+        android:textSize="10sp"/>
+
+
+    <Button android:id="@+id/button"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/rectangle"
+        android:paddingBottom="9dp"
+        android:paddingRight="3dp"
+        android:text="@string/Avboka"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"/>
 
     <TextView
-        android:id="@id/gym_location"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_below="@+id/instructors_name"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@id/instructors_name"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:textSize="20sp" />
-
-    <Button
+        android:text="22"
+        android:textColor="@color/pink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Knapp"
-        android:background="#FFFFFF"
-        android:layout_toRightOf="@id/sats_core"/>
+        android:layout_gravity="right"
+        android:id="@+id/max_person_count"
+        android:layout_marginRight="20dp"
+        android:textStyle="bold"
+        android:layout_alignBottom="@+id/icon"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button"/>
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_gravity="left"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/icon_queue"
+        android:layout_below="@+id/button"
+        android:layout_toLeftOf="@+id/max_person_count"
+        android:layout_toStartOf="@+id/max_person_count"/>
+
+    <View
+        android:id="@+id/divider_horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        android:layout_above="@+id/kalender"/>
+
+
+    <FrameLayout
+        android:id="@+id/kalender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/max_person_count"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:background="@drawable/imageview_calendar_pressed">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_calender"
+        android:layout_marginRight="115dp"
+        />
+
+        <TextView
+            android:id="@+id/add_to_calendar"
+            android:text="Lägg till i kalendern"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_marginLeft="35dp"/>
+
+    </FrameLayout>
 
 
 </RelativeLayout>
