xml design and added textviews

--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -1,107 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/activity_starttime">
+
+        <TextView
+            android:id="@+id/activity_starttime_hour"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:textSize="30dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/white"
+            android:background="@drawable/activity_start_time" />
+
+        <TextView
+            android:id="@+id/activity_starttime_minutes"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:paddingLeft="5dp"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:background="@drawable/activity_start_time" />
+
+    </LinearLayout>
 
 
     <TextView
         android:id="@+id/workout_type"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="5dp"
         android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/gym_location"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/workout_type"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/instructors_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/gym_location"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
 
-    <Button android:id="@+id/button"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="5dp"
+    <Button
+        android:id="@+id/button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rectangle"
         android:paddingBottom="9dp"
         android:paddingRight="3dp"
         android:text="@string/Avboka"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF" />
 
     <TextView
-        android:text="22"
-        android:textColor="@color/pink"
+        android:id="@+id/waiting_list_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:id="@+id/max_person_count"
-        android:layout_marginRight="20dp"
-        android:textStyle="bold"
         android:layout_alignBottom="@+id/icon"
+        android:layout_alignEnd="@+id/button"
         android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button"/>
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:text="22"
+        android:textColor="@color/pink"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
+        android:layout_below="@+id/button"
         android:layout_gravity="left"
         android:layout_marginRight="10dp"
-        android:background="@drawable/icon_queue"
-        android:layout_below="@+id/button"
-        android:layout_toLeftOf="@+id/max_person_count"
-        android:layout_toStartOf="@+id/max_person_count"/>
+        android:layout_toLeftOf="@+id/waiting_list_count"
+        android:layout_toStartOf="@+id/waiting_list_count"
+        android:background="@drawable/icon_queue" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/activity_starttime"
+        android:id="@+id/activity_length">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_time"
+            android:layout_marginLeft="10dp"/>
+
+
+        <TextView
+            android:id="@+id/activity_length_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="längd på passet"
+            android:layout_above="@+id/divider_horizontal"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"/>
+
+    </LinearLayout>
 
     <View
         android:id="@+id/divider_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="@android:color/black"
-        android:layout_above="@+id/kalender"/>
+        android:layout_below="@+id/activity_length"
+        android:background="@android:color/black" />
 
 
     <FrameLayout
         android:id="@+id/kalender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/max_person_count"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:clickable="true"
-        android:background="@drawable/imageview_calendar_pressed">
+        android:layout_below="@+id/divider_horizontal"
+        android:background="@drawable/imageview_calendar_pressed"
+        android:clickable="true">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_calender"
-        android:layout_marginRight="115dp"
-        />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="115dp"
+            android:src="@drawable/ic_calender" />
 
         <TextView
             android:id="@+id/add_to_calendar"
-            android:text="Lägg till i kalendern"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
             android:gravity="bottom"
-            android:layout_marginLeft="35dp"/>
+            android:text="Lägg till i kalendern" />
 
     </FrameLayout>
+
+
 
 
 </RelativeLayout>
