--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,15 @@
         android:orientation="horizontal">
 
         <ListView
+            android:layout_marginLeft="5dp"
             android:layout_gravity="bottom"
             android:background="@drawable/rectangle48"
             android:id="@+id/list_view"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="355dp"
+            android:layout_height="250dp"
             android:orientation="horizontal"
             android:textSize="20sp"
-            android:dividerHeight="25dp"/>
+            android:dividerHeight="25dp"/>/>
 
     </LinearLayout>
 
