--- a/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primaryColor"
+    android:background="@color/gray_light"
     app:theme="@style/MyCustomToolBarTheme"
     android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
