--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="122dp"
-                android:orientation="vertical"
-    android:background="@drawable/rectangle48">
+    android:layout_width="fill_parent"
+    android:layout_height="140dp"
+    android:layout_marginTop="30dp"
+    android:background="@drawable/rectangle48"
+    android:orientation="vertical">
 
 
     <LinearLayout
+        android:id="@+id/activity_starttime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/activity_starttime">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/activity_starttime_hour"
             android:layout_width="30dp"
             android:layout_height="35dp"
-            android:textSize="20sp"
             android:layout_marginTop="5dp"
+            android:background="@drawable/clock_background"
             android:paddingLeft="5dp"
             android:textColor="@color/white"
-            android:background="@drawable/activity_start_time" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/activity_starttime_minutes"
@@ -28,43 +29,43 @@
             android:layout_height="35dp"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="5dp"
+            android:background="@drawable/clock_background"
             android:paddingLeft="5dp"
-            android:textSize="20sp"
             android:textColor="@color/white"
-            android:background="@drawable/activity_start_time" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
 
     <LinearLayout
+        android:id="@+id/activity_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/activity_starttime"
-        android:id="@+id/activity_length">
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_alignParentLeft="true"
+            android:layout_alignTop="@+id/icon"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/ic_time"
-            android:layout_alignTop="@+id/icon"/>
+            android:background="@drawable/ic_time" />
 
 
         <TextView
             android:id="@+id/activity_length_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:text="längd på passet"
             android:layout_above="@+id/divider_horizontal"
             android:layout_alignParentLeft="true"
-            android:textSize="9sp"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:text="längd på passet"
+            android:textSize="9sp" />
 
     </LinearLayout>
 
@@ -75,7 +76,7 @@
         android:layout_marginLeft="70dp"
         android:layout_marginTop="5dp"
         android:textSize="15sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/gym_location"
@@ -83,7 +84,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="23dp"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/instructors_name"
@@ -91,7 +92,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="38dp"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/button"
@@ -109,7 +110,7 @@
         android:text="@string/Avboka"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/waiting_list_count"
@@ -121,7 +122,7 @@
         android:layout_marginRight="15dp"
         android:text="20"
         android:textColor="@color/pink"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/icon"
@@ -131,7 +132,7 @@
         android:layout_margin="5dp"
         android:layout_toLeftOf="@+id/waiting_list_count"
         android:layout_toStartOf="@+id/waiting_list_count"
-        android:background="@drawable/icon_queue"/>
+        android:background="@drawable/icon_queue" />
 
     <View
         android:id="@+id/divider_horizontal"
@@ -141,72 +142,82 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button"
         android:layout_marginTop="42dp"
-        android:background="@drawable/divider_long"/>
+        android:background="@drawable/divider_long" />
 
-        <ImageView
-            android:layout_marginBottom="2dp"
-            android:layout_width="20dp"
-            android:layout_height="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/ic_calender"
-            android:id="@+id/imageView2"
-            android:layout_alignBottom="@+id/add_to_calendar"/>
-
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="20dp"
+        android:layout_height="10dp"
+        android:layout_alignBottom="@+id/add_to_calendar"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_calender" />
 
 
     <TextView
-        android:layout_marginTop="4dp"
         android:id="@+id/add_to_calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:textSize="10sp"
-        android:text="Lägg till i kalendern"
-        android:layout_marginLeft="-2dp"
         android:layout_alignTop="@+id/divider_horizontal"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@+id/imageView2"
         android:layout_toRightOf="@+id/imageView2"
-        android:layout_toEndOf="@+id/imageView2"/>
+        android:gravity="bottom"
+        android:text="Lägg till i kalendern"
+        android:textSize="10sp" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="20dp"
         android:layout_height="10dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/ic_more"
         android:layout_alignTop="@+id/divider_horizontal"
-        android:layout_toRightOf="@+id/add_to_calendar"
-        android:layout_toEndOf="@+id/add_to_calendar"
         android:layout_marginLeft="45dp"
         android:layout_marginStart="64dp"
-        android:id="@+id/textView3"/>
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/add_to_calendar"
+        android:layout_toRightOf="@+id/add_to_calendar"
+        android:background="@drawable/ic_more" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mer om passet"
-        android:textSize="9sp"
-        android:layout_marginRight="-10dp"
         android:layout_alignTop="@+id/textView3"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="-10dp"
         android:layout_toLeftOf="@+id/button"
         android:layout_toStartOf="@+id/button"
-        android:layout_marginEnd="28dp" />
+        android:text="Mer om passet"
+        android:textSize="9sp" />
 
     <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:background="@drawable/mid_divider"
         android:layout_alignTop="@+id/divider_horizontal"
-        android:layout_toRightOf="@+id/add_to_calendar"
-        android:layout_toEndOf="@+id/add_to_calendar"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-        android:id="@+id/imageView3"/>
+        android:layout_toEndOf="@+id/add_to_calendar"
+        android:layout_toRightOf="@+id/add_to_calendar"
+        android:background="@drawable/mid_divider" />
 
     <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="347dp"
         android:layout_height="0.5dp"
-        android:background="@drawable/divider_long"
         android:layout_below="@+id/imageView3"
-        android:id="@+id/imageView4" />
+        android:background="@drawable/divider_long" />
+
+
+    <TextView
+        android:text="Lördag, 9 Maj"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray"
+        android:layout_below="@+id/imageView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="7dp"/>
 
 </RelativeLayout>
