--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -218,6 +218,8 @@
         android:layout_below="@+id/imageView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="7dp"/>
+        android:layout_marginTop="7dp"
+        android:layout_alignParentEnd="false"
+        android:id="@+id/activity_date" />
 
 </RelativeLayout>
