--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -2,46 +2,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="vertical"
-    android:gravity="top"
+    android:layout_marginLeft="-13dp"
     android:background="@color/white"
-              android:layout_marginLeft="-13dp"
+    android:baselineAligned="false"
+    android:gravity="top"
+    android:orientation="vertical"
     tools:context=".se.tuppload.android.satstrainingapp">
-
-
-
 
     <include
         android:id="@+id/app_bar"
-        layout="@layout/app_bar"/>
+        layout="@layout/app_bar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"></LinearLayout>
+
     <LinearLayout
-        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical">
 
 
         <TextView
-            android:text="Kommande träning"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/gray_light"/>
+            android:background="@color/gray_light"
+            android:text="Kommande träning" />
 
         <ListView
-            android:layout_marginLeft="8dp"
-            android:layout_gravity="bottom"
             android:id="@+id/list_view"
             android:layout_width="wrap_content"
             android:layout_height="260dp"
-            android:textSize="20sp"
-            />
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="8dp"
+            android:textSize="20sp" />
 
 
     </LinearLayout>
