--- a/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar  xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/gray_light"
-    app:theme="@style/MyCustomToolBarTheme"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:theme="@style/MyCustomToolBarTheme">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
-        <ImageView android:id="@+id/refresh"
-                   android:layout_marginRight="3dp"
-            android:layout_marginTop="1dp"
+        <ImageButton
+            android:id="@+id/refresh"
             android:layout_width="35dp"
             android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="1dp"
             android:background="@drawable/refresh_icon"
-                   android:layout_alignTop="@+id/imageView"
-                   android:layout_alignParentRight="true"
-                   android:layout_alignParentEnd="true"/>
-
-        <ImageView android:id="@+id/meny_icon"
-            android:layout_width="15dp"
-            android:layout_height="35dp"
-            android:background="@drawable/meny_icon"
-                   android:layout_alignParentTop="true"
-                   android:layout_alignParentLeft="true"
-                   android:layout_alignParentStart="true"/>
+            android:onClick="refreshJson"/>
 
         <ImageView
+            android:id="@+id/meny_icon"
+            android:layout_width="15dp"
+            android:layout_height="35dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/meny_icon" />
+
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="90dp"
             android:layout_height="30dp"
-            android:background="@drawable/sats_logo"
-            android:id="@+id/imageView"
             android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/meny_icon"
             android:layout_toRightOf="@+id/meny_icon"
-            android:layout_toEndOf="@+id/meny_icon"/>
+            android:background="@drawable/sats_logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:text="Min Träning"
-            android:textColor="#626262"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:text="Min Träning"
+            android:textAllCaps="true"
+            android:textColor="#626262"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
