--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -95,7 +95,7 @@
         android:textSize="10sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/cancel_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="75dp"
         android:layout_height="40dp"
@@ -116,19 +116,19 @@
         android:id="@+id/waiting_list_count"
         android:layout_width="20dp"
         android:layout_height="17dp"
-        android:layout_alignBottom="@+id/icon"
-        android:layout_alignEnd="@+id/button"
-        android:layout_alignRight="@+id/button"
+        android:layout_alignBottom="@+id/queue_icon"
+        android:layout_alignEnd="@+id/cancel_button"
+        android:layout_alignRight="@+id/cancel_button"
         android:layout_marginRight="15dp"
         android:text="20"
         android:textColor="@color/pink"
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/queue_icon"
         android:layout_width="15dp"
         android:layout_height="13dp"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/cancel_button"
         android:layout_margin="5dp"
         android:layout_toLeftOf="@+id/waiting_list_count"
         android:layout_toStartOf="@+id/waiting_list_count"
@@ -140,12 +140,12 @@
         android:layout_height="0.2dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/cancel_button"
         android:layout_marginTop="42dp"
         android:background="@drawable/divider_long" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/add_to_calendar_img"
         android:layout_width="20dp"
         android:layout_height="10dp"
         android:layout_alignBottom="@+id/add_to_calendar"
@@ -162,14 +162,14 @@
         android:layout_alignTop="@+id/divider_horizontal"
         android:layout_marginLeft="-2dp"
         android:layout_marginTop="4dp"
-        android:layout_toEndOf="@+id/imageView2"
-        android:layout_toRightOf="@+id/imageView2"
+        android:layout_toEndOf="@+id/add_to_calendar_img"
+        android:layout_toRightOf="@+id/add_to_calendar_img"
         android:gravity="bottom"
         android:text="Lägg till i kalendern"
         android:textSize="10sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/about_class_img"
         android:layout_width="20dp"
         android:layout_height="10dp"
         android:layout_alignTop="@+id/divider_horizontal"
@@ -181,18 +181,19 @@
         android:background="@drawable/ic_more" />
 
     <TextView
+        android:id="@+id/about_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView3"
+        android:layout_alignTop="@+id/about_class_img"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="-10dp"
-        android:layout_toLeftOf="@+id/button"
-        android:layout_toStartOf="@+id/button"
+        android:layout_toLeftOf="@+id/cancel_button"
+        android:layout_toStartOf="@+id/cancel_button"
         android:text="Mer om passet"
         android:textSize="9sp" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/divider_vertical"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_alignTop="@+id/divider_horizontal"
@@ -203,23 +204,23 @@
         android:background="@drawable/mid_divider" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/divider_horizontal_2"
         android:layout_width="347dp"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/imageView3"
+        android:layout_below="@+id/divider_vertical"
         android:background="@drawable/divider_long" />
 
 
     <TextView
-        android:text="Lördag, 9 Maj"
+        android:id="@+id/activity_date"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray"
-        android:layout_below="@+id/imageView4"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/divider_horizontal_2"
         android:layout_marginTop="7dp"
-        android:layout_alignParentEnd="false"
-        android:id="@+id/activity_date" />
+        android:background="@color/white"
+        android:text="Lördag, 9 Maj" />
 
 </RelativeLayout>
