--- a/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_adapter.xml
@@ -45,6 +45,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/clock_icon"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_alignParentLeft="true"
