--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,14 @@
         layout="@layout/app_bar" />
 
     <LinearLayout
+        android:id="@+id/graph_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <LinearLayout
+        android:id="@+id/list_view_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
