--- a/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
@@ -24,7 +24,7 @@
             android:onClick="refreshJson"/>
 
         <ImageView
-            android:id="@+id/meny_icon"
+            android:id="@+id/menu_icon"
             android:layout_width="15dp"
             android:layout_height="35dp"
             android:layout_alignParentLeft="true"
@@ -37,8 +37,8 @@
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/meny_icon"
-            android:layout_toRightOf="@+id/meny_icon"
+            android:layout_toEndOf="@+id/menu_icon"
+            android:layout_toRightOf="@+id/menu_icon"
             android:background="@drawable/sats_logo" />
 
         <TextView
