--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical" />
+        android:orientation="horizontal">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/black"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/list_view_layout"
@@ -34,13 +40,21 @@
             android:background="@color/gray_light"
             android:text="Kommande träning" />
 
-        <ListView
-            android:id="@+id/list_view"
+        <se.emilsjolander.stickylistheaders.StickyListHeadersListView
+            android:id="@+id/sticky_list"
             android:layout_width="wrap_content"
             android:layout_height="260dp"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="8dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:background="@color/black"/>
+
+        <!--<ListView-->
+            <!--android:id="@+id/list_view"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="260dp"-->
+            <!--android:layout_gravity="bottom"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:textSize="20sp" />-->
 
 
     </LinearLayout>
