--- a/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/app_bar.xml
@@ -11,13 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/refresh"
             android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/imageView"
+            android:layout_alignTop="@+id/sats_logo"
             android:layout_marginRight="3dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/refresh_icon"
@@ -33,7 +33,7 @@
             android:background="@drawable/meny_icon" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/sats_logo"
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
