--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="top"
-                tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="top"
+    tools:context=".MainActivity">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:local="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_alignParentLeft="true">
+        xmlns:local="http://schemas.android.com/apk/res-auto"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true">
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar"/>
+            layout="@layout/toolbar" />
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/main_content"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/main_content"
-            android:layout_below="@id/toolbar">
+            android:layout_below="@id/toolbar"
+            android:orientation="vertical">
 
             <com.sothree.slidinguppanel.SlidingUpPanelLayout
-                android:id="@+id/sliding_layout"
                 xmlns:sothree="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/sliding_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
@@ -37,7 +37,7 @@
                 <FrameLayout
                     android:id="@+id/graph"
                     android:layout_width="wrap_content"
-                    android:layout_height="250dp"/>
+                    android:layout_height="250dp" />
 
                 <RelativeLayout
                     android:id="@+id/my_training"
@@ -49,22 +49,21 @@
                         android:id="@+id/tidigare"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="9dp"
                         android:gravity="center_vertical"
+                        android:text=""
                         android:textColor="@color/dark_gray"
                         android:textSize="12dp"
-                        android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
-                        android:layout_marginTop="9dp"/>
+                        android:textStyle="bold" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/drag_button_normal"
                         android:layout_centerHorizontal="true"
                         android:scaleX="0.50"
-                        android:scaleY="0.50"/>
-
-
+                        android:scaleY="0.50"
+                        android:src="@drawable/drag_button_normal" />
 
 
                     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
@@ -72,7 +71,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tidigare"
-                        android:layout_marginTop="10dp"/>
+                        android:layout_marginTop="10dp" />
 
                 </RelativeLayout>
 
