Added a bunch of stuff

--- a/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
@@ -50,7 +50,8 @@
                         android:layout_marginLeft="8dp"
                         android:text="Type"
                         android:textSize="14dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 </LinearLayout>
 
