--- a/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
@@ -114,7 +114,8 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="@color/secondary_color"
-                        android:layout_marginLeft="5dp" />
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="-1dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -271,7 +272,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Lägg till i kalender"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="2dp"
                         android:textSize="11dp" />
                 </LinearLayout>
 
@@ -280,7 +281,7 @@
             <LinearLayout
                 android:id="@+id/divider"
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/mid_divider"
                 android:layout_centerHorizontal="true"/>
@@ -316,7 +317,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Mer om passet"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="1dp"
                         android:textSize="11dp" />
                 </LinearLayout>
 
