--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 xmlns:sothree="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/gray_light"
                 android:gravity="bottom"
                 sothree:umanoDragView="@+id/tidigare"
                 sothree:umanoOverlay="true"
@@ -72,6 +73,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tidigare"
+                        android:background="@color/gray_light"
                         android:layout_marginTop="10dp"/>
 
                 </RelativeLayout>
