--- a/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_own.xml
@@ -47,6 +47,7 @@
                         android:id="@+id/own_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
                         android:layout_marginLeft="8dp"
                         android:text="Type"
                         android:textSize="14dp"
