--- a/SATSTrainingApp/app/src/main/res/layout/date_header.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/date_header.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/date_header"
-        android:background="@color/gray_light"
+        android:background="@color/background_header"
         android:paddingLeft="15dp"
         android:textSize="14dp"/>
 
